--- a/src/components/shared/Navbar.astro
+++ b/src/components/shared/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 import { ProtectedRoutes, PublicRoutes } from "@/helper/routes";
 
-
+const {isLoggedIn} = Astro.locals
 ---
 <nav class="flex justify-between px-20 py-10 items-center bg-white">
   <h1 class="text-xl text-gray-800 font-bold">Astro Auth</h1>
@@ -11,16 +11,22 @@ import { ProtectedRoutes, PublicRoutes } from "@/helper/routes";
       <li class="font-semibold text-gray-700">
         <a href="/">Home</a>
       </li>
-      <li class="font-semibold text-gray-700">
-        <a href={`/${ProtectedRoutes.PRIVATE}/${ProtectedRoutes.PROTECTED}`}>Protegido</a>
-      </li>
-      <li class="font-semibold text-gray-700">
-        <a href={`/${PublicRoutes.PUBLIC}/${PublicRoutes.LOGIN}`}>Ingresar</a>
-      </li>
-      <li id='logout' class="font-semibold text-gray-700">
-        <a href="#">Salir</a>
-      </li>
-
+      {
+      isLoggedIn && (
+        <li class="font-semibold text-gray-700">
+          <a href={`/${ProtectedRoutes.PRIVATE}/${ProtectedRoutes.PROTECTED}`}>Protegido</a>
+        </li>
+        )
+        }
+        {!isLoggedIn ? (
+          <li class="font-semibold text-gray-700">
+            <a href={`/${PublicRoutes.PUBLIC}/${PublicRoutes.LOGIN}`}>Ingresar</a>
+          </li>
+        ):(
+          <li id='logout' class="font-semibold text-gray-700">
+            <a href="#">Salir</a>
+          </li>
+        )
       <li>
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
