--- a/src/pages/protected/Protected.astro
+++ b/src/pages/protected/Protected.astro
@@ -2,27 +2,38 @@
 import { PublicRoutes } from '@/helper/routes';
 import {firebase} from '@/firebase/config'
 import MainLayout from "@/layouts/MainLayout.astro";
-const firebaseUser = firebase?.auth?.currentUser
+// const firebaseUser = firebase?.auth?.currentUser
 
-if(firebaseUser === null) {
+
+const {user, isLoggedIn}=Astro.locals
+
+if(!isLoggedIn || !user){
   return Astro.redirect(`/${PublicRoutes?.PUBLIC}/${PublicRoutes?.LOGIN}`)
 }
-await firebaseUser.reload()
-const {
-  displayName,
-  email,
-  emailVerified,
-  photoURL
-} = firebaseUser
-const name = displayName ?? 'No display name'
+
+const {avatar, name, email, emailVerified} = user; 
+
+
+
+// if(firebaseUser === null) {
+//   return Astro.redirect(`/${PublicRoutes?.PUBLIC}/${PublicRoutes?.LOGIN}`)
+// }
+// await firebaseUser.reload()
+// const {
+//   displayName,
+//   email,
+//   emailVerified,
+//   photoURL
+// } = firebaseUser
+// const name = displayName ?? 'No display name'
 ---
 <MainLayout>
   <div class="bg-gray-200 rou-xl font-sans h-[600px] w-full flex flex-row justify-center items-center">
     <div class="card w-96 mx-auto bg-white  shadow-xl hover:shadow rounded-xl ">
       {
-        photoURL ? (
+        avatar ? (
           <img 
-            src={photoURL} 
+            src={avatar} 
             class="w-32 mx-auto rounded-full -mt-20 border-8 border-white" 
             alt=`Avatar de ${name}`
           >
